# PointPillars_MultiHead_40FPS

./: CMakeLists.txt  README.md  bootstrap.yaml
onnx_wrapper/: CMakeLists.txt  readme.md
onnx_wrapper/include/: crc_checker.h  logging_utils.h  ort_model_infer_base.h  ort_pointpillars_backbone_infer.h  ort_pointpillars_pfe_infer.h  pointpillars_pipeline.h
onnx_wrapper/pointpillars_ops/: nms.cc  nms.h  postproc.cc  postproc.h  preproc.cc  preproc.h  scatter.cc  scatter.h
onnx_wrapper/src/: main.cc  main.cpp  ort_model_infer_base.cc  ort_pointpillars_backbone_infer.cc  ort_pointpillars_pfe_infer.cc  pointpillars_pipeline.cc
onnx_wrapper/test/: test_main.cc  test_nms.cc  test_pipeline.cc
pointpillars/: pointpillars.cc  preprocess.cu  preprocess.h
test/: CMakeLists.txt  pointpillars_test.cc
test/testdata/: n015-2018-11-21-19-38-26+0800__LIDAR_TOP__1542801007446751.pcd.txt
tools/: viewer.py
